--- a/checkIsType/checkIsType_analysis.ipynb
+++ b/checkIsType/checkIsType_analysis.ipynb
@@ -381,7 +381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* It is apparent that the comparsion of similar type Objects contribute the most to the execution time of a \"quasi real world\" workload such as the aforementioned http-test workload\n",
+    "* It is apparent that the comparison of similar type Objects contribute the most to the execution time of a \"quasi real world\" workload such as the aforementioned http-test workload\n",
     "* Comparision of similar primitive types is not an issue at the moment\n",
     "* An relatively easy fix for the Object type comparision would be to cache the results of the Object type checks. This has the potential to give a significant performance boost to real world workloads."
    ]
